# ImgVisFeat

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  ty.toml
.github/workflows/: deploy_docs.yml  lint.yml  lints_tests.yml  liny.yml  publish_docs.yml  publish_pypi.yml  test.yml
ImgVisuFeat/: Visualizer.py
api/: index.html
api/results/: index.html
api/visualizers/: index.html
cli/: index.html
docs/: api.rst  cli.md  cli.rst  conf.py  getting-started.md  index.md  index.rst
docs/api/: data_classes.rst  index.md  index.rst  results.md  visualizers.md  visualizers.rst
docs/guide/: color-channels.md  gradients.md  hog.md  index.md  keypoints.md  lbp.md  power-spectrum.md  visualizer.md
getting-started/: index.html
guide/: index.html
guide/color-channels/: index.html
guide/gradients/: index.html
guide/hog/: index.html
guide/keypoints/: index.html
guide/lbp/: index.html
guide/power-spectrum/: index.html
guide/visualizer/: index.html
imgvisfeat/: AbstractVisualizer.py  ColorChannelVisualizer.py  ColorGradientVisualizer.py  GradientVisualizer.py  GrayGradientVisualizer.py  HoGVisualizer.py  KeypointVisualizer.py  LBPVisualizer.py  Visualizer.py  __init__.py  cli.py  type.py
search/: search_index.json
src/imfv/: AbstractVisualizer.py  HoGVisualizer.py  cli.py
src/imgvisfeat/: ColorChannelVisualizer.py  GradientVisualizer.py  HoGVisualizer.py  KeypointVisualizer.py  LBPVisualizer.py  PowerSpectrumVisualizer.py  __init__.py  type.py
src/imvf/: cli.py
src/ivf/: KeypointVisualizer.py  PowerSpectrumVisualizer.py  Visualizer.py  cli.py
tests/: conftest.py  test_ColorChannelVisualizer.py  test_GradientVisualizer.py  test_HoGVisualizer.py  test_KeypointVisualizer.py  test_LBPVisualizer.py  test_PowerSpectrumVisualizer.py  test_cli.py  test_type.py  test_version.py  test_visualizer.py  utils.py
