[project]
name = "ImgVisFeat"
version = "0.0.0"
description = "Image Visualization and Feature Extraction Library"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}
keywords = ['image_processing', 'feature_extraction', 'visualization']
authors = [
    {name = "chatflip", email = "oo.chat.flip@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy",
    "opencv-python",
    "scikit-image",
]

[dependency-groups]
dev = [
    "pre-commit",
]
lint = [
    "ruff~=0.14.3",
    "mypy~=1.18.2",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/chatflip/ImgVisFeat"
Repository = "https://github.com/chatflip/ImgVisFeat"
Documentation = "https://chatflip.github.io/ImgVisFeat"
Issues = "https://github.com/chatflip/ImgVisFeat/issues"

[project.scripts]
ivf = "imgvisfeat.cli:main"

[tool.uv]
default-groups = "all"

[tool.uv.dependency-groups]
dev = {requires-python = "~=3.13.0"}

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
omit = ["tests/*"]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
